// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`splitSentenceByMatch() should match testTables 1`] = `
Object {
  "head": "今月は",
  "match": "売上",
  "tail": "が落ちた",
}
`;

exports[`splitSentenceByMatch() should match testTables 2`] = `
Object {
  "head": "彼らがデートをしているのを見かけて",
  "match": "近々",
  "tail": "結婚するのってきいたんだ",
}
`;

exports[`splitSentenceByMatch() should match testTables 3`] = `
Object {
  "head": "まず始めに、",
  "match": "各",
  "tail": "チームの代表者を決めて下さい",
}
`;

exports[`splitSentenceByMatch() should match testTables 4`] = `
Object {
  "head": "胡瓜の浅",
  "match": "漬け",
  "tail": "ならありますよ",
}
`;

exports[`splitSentenceByMatch() should match testTables 5`] = `
Object {
  "head": "わたしは５",
  "match": "才",
  "tail": "です",
}
`;

exports[`splitSentenceByMatch() should match testTables 6`] = `
Object {
  "head": "フラミンゴがキスをする時、二羽の頭と首が",
  "match": "ハート形",
  "tail": "を描く",
}
`;

exports[`splitSentenceByMatch() should match testTables 7`] = `
Object {
  "head": "彼は",
  "match": "フランス人",
  "tail": "です",
}
`;

exports[`splitSentenceByMatch() should match testTables 8`] = `
Object {
  "head": "約１年半で約億通の",
  "match": "迷惑メール",
  "tail": "を送りました",
}
`;

exports[`splitSentenceByMatch() should match testTables 9`] = `
Object {
  "head": "",
  "match": "烏龍茶",
  "tail": "を氷抜きでください",
}
`;

exports[`splitSentenceByMatch() should match testTables 10`] = `
Object {
  "head": "ああ、この",
  "match": "缶ビール",
  "tail": "はマジでうますぎる",
}
`;

exports[`splitSentenceByMatch() should match testTables 11`] = `
Object {
  "head": "「あの、かりんさん...、",
  "match": "そろそろ",
  "tail": "お開きにしませんか？」「駄目、勝ち逃げ禁止！今度こそボクが勝つの！」",
}
`;

exports[`splitSentenceByMatch() should match testTables 12`] = `
Object {
  "head": "",
  "match": "マンコ",
  "tail": "いいな〜",
}
`;

exports[`splitSentenceByMatch() should match testTables 13`] = `
Object {
  "head": "この「オンボード」というのは平たく言えば「グラフィックカードが",
  "match": "つ",
  "tail": "いていない」ものだ",
}
`;
